fixed taskfile
